apps/oidc/resources/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc
spec:
  parentRefs:
    - name: eg
      namespace: default
      sectionName: "https-oidc-starship"
  hostnames:
    - oidc.starship.mandacode.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known
      backendRefs:
        - name: oidc-provider
          port: 80
